basic tags initial version

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Título da página: Copacabana Inn - Rio de Janeiro - Brazil
+            Form básico
         </title>
     </head>
     <body>
-        <h1>Opções de hospedagem</h1>
-        <p>Opções de hospedagem são inúmeras e seguem abaixo: </p>
-        <p>Opções de hospedagem são inúmeras e seguem abaixo: </p>
-        <blockquote>- Opções de hospedagem são inúmeras e seguem abaixo: </blockquote>
+        <p>O <a href="https://www.devmedia.com.br/html/">HTML</a> é uma linguagem que diz para o navegador o que é que, em uma página,  (um texto, link, imagem etc). Sem conhecê-la
+        é impossível criar um site ou app web.
+        </p>
+        <p>
+            <label>
+                Digite o email para receber informações sobre HTML
+            </label>
+
+            <input id="e-mail" />
+        </p>
     </body>
 </html>
