basic a href/div

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        <p>O <a href="https://www.devmedia.com.br/html/">HTML</a> é uma linguagem que diz para o navegador o que é que, em uma página,  (um texto, link, imagem etc). Sem conhecê-la
+        <p>O <a href="https://www.devmedia.com.br/html/" target="_blank">HTML</a> é uma linguagem que diz para o navegador o que é que, em uma página,  (um texto, link, imagem etc). Sem conhecê-la
         é impossível criar um site ou app web.
         </p>
         <p>
@@ -17,5 +17,20 @@
 
             <input id="e-mail" />
         </p>
+        <p>Entre em <a href="#contato">contato</a>
+        </p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div id="contato">
+            <h3>
+            Contato
+            </h3>
+            <p>
+                Nome: <input id="nome" size="100"/><br>
+                Mensagem: <br><textarea id="mensagem" cols="110" rows="10" placeholder="Digite sua mensagem..."></textarea><br>
+                <input type="submit" id="btn_submit" value="Enviar" />
+            </p>
+        </div>
     </body>
 </html>
