website basic structure (no CSS yet)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,116 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            Título da página: Copacabana Inn - Rio de Janeiro - Brazil
-        </title>
-    </head>
-    <body>
-        <h1>Opções de hospedagem</h1>
-        <p>Opções de hospedagem são inúmeras e seguem abaixo: </p>
-        <p>Opções de hospedagem são inúmeras e seguem abaixo: </p>
-        <blockquote>- Opções de hospedagem são inúmeras e seguem abaixo: </blockquote>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>
+        Pousada Secreta: Angra dos Reis Inn - Rio de Janeiro - Brazil
+    </title>
+</head>
+
+<body>
+    <div id="top">
+        <div id="top_elements">
+            <div id="top_left">
+                <a href="index.html">Pousada <span>Secreta</span></a>
+            </div>
+            <div id="top_right">
+                <a href="#about">Sobre</a>
+                <a href="#route">Rota</a>
+                <a href="#">Quartos</a>
+            </div>
+        </div>
+    </div>
+    <div id="center">
+        <div id="welcome_main">
+            <div id="welcome_container">
+                <h1>Pousada Secreta</h1>
+                <p>A Pousada Reservada em Angra dos Reis</p>
+            </div>
+        </div>
+        <div id="inn_options">
+            <h2>Seja Bem-vindo(a)!</h2>
+            <p>Relaxe em nossas acomodações e curta o melhor de Angra dos Reis.</p>
+            <p>Temos opções para solteiros, casais e famílias.</p>
+        </div>
+        <div id="room_container">
+            <div id="room-0">
+                <img src="assets/quarto-casal1.jpg" alt="Quarto de Solteiro" title="Reserve o quarto de solteiro!" id="room-img-0">
+                <a href="#quartosolteiro" id="room-link-0">Quarto de Solteiro</a>
+            </div>
+            <div id="room-1">
+                <img src="assets/quarto-solteiro1.jpg" alt="Quarto de Casal" title="Reserve o quarto de casal!" id="room-img-1">
+                <a href="#quartocasal" id="room-link-1">Quarto de Casal</a>
+            </div>
+            <div id="room-2">
+                <img src="assets/quarto-familia1.jpg" alt="Quarto Família" title="Reserve o quarto família!" id="room-img-2">
+                <a href="#quartofamilia" id="room-link-2">Quarto Família</a>
+            </div>
+        </div>
+        <div id="route">
+            <h2>Rota</h2>
+            <p>Veja como chegar à Pousada.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117529.6438435302!2d-44.48149876836581!3d-22.994330505678427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c4dd7a56874eb%3A0x96f55316ce2eed42!2sPousada%20Riccio%20Di%20Mare!5e0!3m2!1sen!2sbr!4v1625507773559!5m2!1sen!2sbr" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div id="about">
+            <h2>Sobre a Pousada</h2>
+            <p>Conheça um pouco mais sobre a nossa pousada.</p>
+        </div>
+        <div id="description_container">
+            <div id="description_card-0">
+                <div id="card_headline">
+                    <h4>A pousada</h4>
+                    <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.</p>
+                </div>
+                <div id="card_img">
+                    <img src="assets/img1.jpg" alt="A pousada" title="Sobre a pousada" id="card_img_0">
+                </div>
+            </div>
+            <div id="description_card-1">
+                <div id="card_headline">
+                    <h4>Nossos quartos</h4>
+                    <p>Os quartos possuem TV de tela plana a cabo, cozinha compacta e área para refeições. Além disso, as unidades da Pousada Dev conta com ar-condicionado...</p>
+                </div>
+                <div id="card_img">
+                    <img src="assets/img2.jpg" alt="Nossos quartos" title="Sobre os nossos quartos" id="card_img_1">
+                </div>
+            </div>
+            <div id="description_card-2">
+                <div id="card_headline">
+                    <h4>Alimentação</h4>
+                    <p>A pousada serve café da manhã em estilo continental ou buffet. Nossos restaurantes funcionam 24hrs.</p>
+                </div>
+                <div id="card_img">
+                    <img src="assets/img3.jpg" alt="Alimentação" title="Restaurantes" id="card_img_2">
+                </div>
+            </div>
+            <div id="description_card-3">
+                <div id="card_headline">
+                    <h4>Recepção</h4>
+                    <p>Nossa repceção fica aberta 24hrs.</p>
+                </div>
+                <div id="card_img">
+                    <img src="assets/img5.jpg" alt="Recepção" title="Atendimento" id="card_img_3">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="bottom">
+        <div id="bottom_elements">
+            <div id="bottom_contact">
+                <div id="bottom_contact_title"><h4>Entre em contato conosco:</h4></div> 
+                <div id="bottom_contact_gmaps"><a href="https://goo.gl/maps/RCGBh8RUfykEtHg58" target="_blank"><img src="/assets/icons/endereco.png">Av. Vereador Benedito Adelino, Lote 5, Gleba F s/n - Retiro, Angra dos Reis - RJ, 23930-500</a></div>
+                <div id="bottom_contact_tel"><a href="tel:+552195555555"><img src="/assets/icons/telefone.png">Cel:+552195555555</a></div> 
+                <div id="bottom_contact_booking"><a href="http://booking.com" target="_blank"><img src="/assets/icons/calendario.png">Faça a sua reserva pelo Booking.com</a></div> 
+            </div>
+            <div id="bottom_copyright">
+            <p>
+                © Copyright - PousadaDev
+            </p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
