--- a/basic-css.html
+++ b/basic-css.html
@@ -4,11 +4,55 @@
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <title>
-            Basic CSS
+            Chapeuzinho Vermelho - Conto dos irmãos Grimm
         </title>
     </head>
     <body>
-        <p>Basic CSS learning.
+        <h1 class="redfont">
+            Chapeuzinho Vermelho
+        </h1>
+        <p>Houve, uma vez uma graciosa menina;
+            quem a via ficava logo gostando dela,
+            assim como ela gostava de todos;
+            <span class="green-barrio">Particularmente, amava a avozinha, que não sabia o que dar e
+            o que fazer pela netinha.</span>
+            Certa vez, presenteou-a com um chapeuzinho de
+            veludo vermelho e, porque lhe ficava muito bem,
+            a menina não mais quis usar outro e acabou ficando
+            com o apelido de Chapeuzinho Vermelho.
+            Um dia, a mãe chamou-a e disse-lhe:
         </p>
+        <p id="p2">Houve, uma vez uma graciosa menina;
+            quem a via ficava logo gostando dela,
+            assim como ela gostava de todos;
+            Particularmente, amava a avozinha, que não sabia o que dar e
+            o que fazer pela netinha.
+            Certa vez, presenteou-a com um chapeuzinho de
+            veludo vermelho e, porque lhe ficava muito bem,
+            a menina não mais quis usar outro e acabou ficando
+            com o apelido de Chapeuzinho Vermelho.
+            Um dia, a mãe chamou-a e disse-lhe:
+        </p>
+        <p id="p3">Houve, uma vez uma graciosa menina;
+            quem a via ficava logo gostando dela,
+            assim como ela gostava de todos;
+            Particularmente, amava a avozinha, que não sabia o que dar e
+            o que fazer pela netinha.
+            Certa vez, presenteou-a com um chapeuzinho de
+            veludo vermelho e, porque lhe ficava muito bem,
+            a menina não mais quis usar outro e acabou ficando
+            com o apelido de Chapeuzinho Vermelho.
+            Um dia, a mãe chamou-a e disse-lhe:
+        </p>
+        <blockquote>- Vem cá, Chapeuzinho Vermelho;
+            aqui tens um pedaço de bolo e uma garrafa de vinho;
+            leva tudo para a vovó; ela está doente e fraca e
+            com isso se restabelecerá.
+            Põe-te a caminho antes que o sol esquente muito e,
+            quando fores, comporta-te direito; não saias do caminho,
+            senão cais e quebras a garrafa e a vovó ficará sem nada.
+            Quando entrares em seu quarto, não esqueças de dizer
+            "bom-dia, vovó," ao invés de mexericar pelos cantos.
+        </blockquote>   
     </body>
 </html>
